force-app/main/default/objects/OCX_Action_Deployment_Account__c/OCX_Action_Deployment_Account__c.object-meta.xml
<CustomObject>
    <label>OCX Deployment Account</label>
    <nameField>
        <displayFormat>ODA-{000000}</displayFormat>
        <label>Deployment Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OCX Deployment Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>