force-app/main/default/objects/OCX_Action_Deployment_Account__c/fields/OCX_Account__c.field-meta.xml
<CustomField>
    <fullName>OCX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OCX Deployment Accounts</relationshipLabel>
    <relationshipName>OCX_Deployment_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>