force-app/main/default/objects/OCX_Action_Deployment_Account__c/fields/OCX_Action_Deployment__c.field-meta.xml
<CustomField>
    <fullName>OCX_Action_Deployment__c</fullName>
    <label>Action Deployment</label>
    <referenceTo>OCX_Action_Deployment__c</referenceTo>
    <relationshipLabel>Deployment Accounts</relationshipLabel>
    <relationshipName>Deployment_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>