force-app/main/default/objects/OCX_Action_Deployment_Account__c/fields/OCX_Deployment_Account_Key__c.field-meta.xml
<CustomField>
    <fullName>OCX_Deployment_Account_Key__c</fullName>
    <externalId>true</externalId>
    <label>Deployment Account Key</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>