force-app/main/default/objects/OCX_Action_Deployment_Account__c/fields/OCX_Status__c.field-meta.xml
<CustomField>
    <fullName>OCX_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>SUCCEEDED</fullName>
                <label>Succeeded</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>WITHDRAWN</fullName>
                <label>Withdrawn</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>