force-app/main/default/objects/OCX_Action_Deployment_Account__c/fields/OCX_Tasks_Created__c.field-meta.xml
<CustomField>
    <fullName>OCX_Tasks_Created__c</fullName>
    <label>Tasks Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>