force-app/main/default/objects/OCX_Action_Deployment_Account__c/fields/OCX_Tasks_Withdrawn__c.field-meta.xml
<CustomField>
    <fullName>OCX_Tasks_Withdrawn__c</fullName>
    <label>Tasks Withdrawn</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>